relnotes: Add note on printing-object doc
relnotes: Add note on printing-object doc

--- a/documentation/release-notes/source/2020.1.rst
+++ b/documentation/release-notes/source/2020.1.rst
@@ -256,6 +256,8 @@ io Library
 * ``*print-escape?*`` and the ``escape?`` parameter for the ``print`` function
   have been documented.
 
+* The ``printing-object`` macro has been documented.
+
 system Library
 --------------
 
