--- a/documentation/release-notes/source/2021.1.rst
+++ b/documentation/release-notes/source/2021.1.rst
@@ -17,6 +17,9 @@ included in Open Dylan as git submodules, may be in other repositories.)
 Compiler
 ========
 
+* Fixed a crash in the optimizer that ocurred when compiling certain
+  C-FFI primitive functions.
+
 Run-time
 ========
 
