collections: Rename the table macro to tabling
Having a macro in a frequently used library with a relatively common name, in
this case "table", can result in confusing compiler warnings:

```
catalog.dylan:254.12-14: Serious warning - Unexpected token "::".
                 --
          (table :: <table>, key :: <string>, expected-type :: <type>)
                 --
```

Technically the compiler could assume that something in parameter position MUST
NOT be a macro call, and similar with `let table = ...`, but this provides a
quick workaround.

I'm open to other names. I considered `make-table` as well and chose somewhat
arbitrarily.

--- a/documentation/release-notes/source/2021.1.rst
+++ b/documentation/release-notes/source/2021.1.rst
@@ -82,6 +82,12 @@ testworks Library
 collections Library
 -------------------
 
+* The ``table`` macro has been renamed to ``tabling``. ``table`` is not an
+  unlikely name for a function parameter when writing code that generically
+  operates on tables, and the existence of the ``table`` macro causes a
+  confusing compiler warning for references to that name that aren't in the
+  correct form.
+
 big-integers library
 --------------------
 
