Mention library fix for list-locator
Requested by @cgay on March 4th

--- a/documentation/release-notes/source/2021.1.rst
+++ b/documentation/release-notes/source/2021.1.rst
@@ -73,6 +73,8 @@ io Library
 system Library
 --------------
 
+* A segmentation fault when using ``list-locator`` was fixed (`bug 1372 <https://github.com/dylan-lang/opendylan/issues/1372>`_).
+
 c-ffi Library
 -------------
 
