--- a/documentation/release-notes/source/2021.1.rst
+++ b/documentation/release-notes/source/2021.1.rst
@@ -23,6 +23,9 @@ Compiler
 * Improved support for code generation of ``apply`` calls to known
   methods.
 
+* Improved source line tracking in the generated code, reducing the
+  occurence of code marked as being at line 0 by the debugger.
+
 Run-time
 ========
 
