Add dylan-tool to the release
Pull it in as a submodule and add it to the Makefile, plus add a release note.

--- a/documentation/release-notes/source/2022.1.rst
+++ b/documentation/release-notes/source/2022.1.rst
@@ -32,6 +32,17 @@ Compiler
   the :file:`sbin` (static executables binary) directory of the
   personal-root.
 
+Tooling
+=======
+
+* The `dylan <https://github.com/dylan-lang/dylan-tool>`_ command is a new tool
+  to manage Dylan packages and workspaces. It provides a centralized catalog of
+  Dylan repositories and a way to manage dependencies without resorting to Git
+  submodules or needing to manually create registry files. See the `dylan-tool
+  documentation <https://opendylan.org/documentation/dylan-tool>`_ for
+  details. (*This tool is still in the relatively early stages of
+  development.*)
+
 Run-time
 ========
 
