console compiler: exit with error status on serious warnings
Non-serious warnings do not cause an error exit status. We can enable that
behavior later with a flag if desired.

Issue #1373

--- a/documentation/release-notes/source/2022.1.rst
+++ b/documentation/release-notes/source/2022.1.rst
@@ -32,6 +32,10 @@ Compiler
   the :file:`sbin` (static executables binary) directory of the
   personal-root.
 
+* To aid in scripting tasks the ``dylan-compiler`` and ``dylan-environment``
+  executables now return an error exit status if any serious warnings are
+  generated.
+
 Tooling
 =======
 
