Fix locator-directory for relative directory locators
It doesn't make sense for a relative directory locator to have an empty
directory path. (But it does make sense for an absolute directory locator, in
which case it represents the root directory.)

Fixes #1470

--- a/documentation/release-notes/source/2023.1.rst
+++ b/documentation/release-notes/source/2023.1.rst
@@ -47,6 +47,9 @@ io Library
 system Library
 --------------
 
+* A [bug](https://github.com/dylan-lang/opendylan/issues/1470) in
+  ``locator-directory`` for relative directory locators was fixed.
+
 
 Contributors
 ============
