[doc] Fix warnings and error (#1521)
* Fix warnings in documentation

Remove warnings in the generation of documents:

- To a nonexisting document 'dylan'
- Pygments lexer name 'jam' is not known (2)
- 'copyright.rst' not included in toctree
- 'Unknown target name' (2)
- Fix broken link: <byte-character>

Fix warnings of 'Unknown target name' in file 'gadget.rst'

- "overall class hierarchy for the duim-gadgets library".
- "subclasses of the <value-gadget> class".
- "subclasses of the <page> class".
- "subclasses of the <button> class".
- "subclasses of the <collection-gadget>class".
- "a variety of value range gadgets".
- "defining column headings and contents in table controls".

* Remove build of documentation 'project-notebook' which was deleted

--- a/documentation/release-notes/source/2019.1.rst
+++ b/documentation/release-notes/source/2019.1.rst
@@ -36,7 +36,7 @@ installed Clang 7.0 or later, you can edit
 ``share/opendylan/build-scripts/config.jam`` and set the CC variable
 to point to your Clang executable:
 
-.. code-block:: jam
+.. code-block:: 
 
    CC                ?= clang-7 ;
    CCFLAGS           ?= -w -g -O2 ;
