system: Improve resolve-locator and directory-contents
directory-contents returns a <file-locator> even for a symlink that resolves to a
directory. Add a `resolve-links?` keyword to resolve links. This uncovered a bug in
resolve-locator such that it would always return a locator of the same class that it was
passed, regardless of the file system entity it resolved to.

--- a/documentation/source/release-notes/2025.2.rst
+++ b/documentation/source/release-notes/2025.2.rst
@@ -23,8 +23,20 @@ Compiler
 Tools
 =====
 
-Library Updates
-===============
+Libraries
+=========
+
+System
+------
+
+* :gf:`resolve-locator` now returns the correct class of locator, :class:`<file-locator>`
+  or :class:`<directory-locator>`, depending on the actual file type of the fully
+  resolved locator.  It previously returned an instance of the same class as the locator
+  it was provided, but that is not always accurate when symbolic links are followed.
+
+* :gf:`directory-contents` has a new keyword argument ``resolve-links?``.  If true,
+  symbolic links are resolved as with :gf:`resolve-locator`.  See the
+  :gf:`directory-contents` documentation for caveats.
 
 Contributors
 ============
