--- a/documentation/source/release-notes/2025.2.rst
+++ b/documentation/source/release-notes/2025.2.rst
@@ -41,5 +41,18 @@ System
 * :gf:`directory-contents` has a new keyword argument ``resolve-links?``.  If true,
   symbolic links are resolved as with :gf:`resolve-file`.
 
+* :gf:`expand-pathname` is no longer called by other ``file-system`` functions. Whether
+  or not to expand ``~`` or ``~user`` in a pathname is up to the user.  The function has
+  been modified such that the :type:`<pathname>` comprised of the exact string ``"~"`` or
+  ``"~user"`` expands to the user's home directory.  Previously these were returned as
+  unexpanded instances of :class:`<file-locator>`.
+
+  :gf:`expand-pathname` now uses the thread safe function ``getpwnam_r`` on Unix systems.
+
+  On Windows :gf:`expand-pathname` simply returns its argument (converted to a
+  :class:`<locator>` if it was a :drm:`<string>`). In a future release it will be fixed
+  to do the same thing as the Unix implementation.  Previously it erroniously did the
+  same thing as :gf:`resolve-locator`.
+
 Contributors
 ============
